@startuml

class Main

package data {
    class Page
    class Link

    Page --> Link
    Page --> "*" Page
}

package global {
    class Config
    class Log
    Log -r-> Config
}

package generator {
    class HierarchicalEdgePrinter
}

package client {
    class Client

    package fetcher {
        class Fetcher
    }

    package parser {
        package html {
            class HtmlParser {
            }
        }

        package url {
            interface BaseUrlParser {
            }
            interface AnimeUrlParser {
            }
            interface CharacterUrlParser {
            }
            interface UrlParser {
            }
            UrlParser -r-|> AnimeUrlParser
            UrlParser -r-|> CharacterUrlParser
            AnimeUrlParser -r-|> BaseUrlParser
            CharacterUrlParser --|> BaseUrlParser
        }

        HtmlParser -d-> UrlParser
    }

    Client -d-> Fetcher
    Client -d--> HtmlParser
}

Main -d-> Client
Main -d-> HierarchicalEdgePrinter

Client --> Page
HierarchicalEdgePrinter -r-> Page

Link -[hidden]d-> Log

@enduml